--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Template repository for webpack-based projects.",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
+    "dev": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
